[tool.poetry]
name = "fin-tracker"
version = "0.1.0"
description = ""
authors = ["nikola864 <kolyab89217115399@mail.ru>"]
readme = "README.md"
packages = [{include = "fin_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.6"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.46"}
asyncpg = "^0.31.0"
structlog = "^25.5.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.22"
uvicorn = "^0.40.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
alembic = "^1.18.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
